# BOLT95

./: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  DESIGN.md  PLAN.md  README.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: pages.yml
config/: models.json
docs/: compatibility.md  limits.md  privacy.md
docs/adr/: 0001-whisper-wasm.md  0002-video-export.md
docs/release/: phase11-evidence.md
public/: manifest.webmanifest  sw.js
scripts/: audit-release.mjs  build-whisper-wasm.sh  evaluate-alignment.ts  fetch-models.mjs  fetch-whisper-fixture.mjs  inspect-whisper-build.mjs
spikes/: shared.css
spikes/video-export/: index.html  main.ts
spikes/whisper/: index.html  main.ts  protocol.ts  whisper.worker.ts
spikes/whisper/native/: CMakeLists.txt  adapter.cpp
src/: main.tsx  vite-env.d.ts
src/app/: App.test.tsx  App.tsx  buildInfo.test.ts  buildInfo.ts
src/app/commands/: alignment.test.ts  alignment.ts  workflow.test.ts  workflow.ts
src/app/errors/: AppError.test.ts  AppError.ts
src/app/jobs/: types.ts
src/app/state/: store.ts
src/components/alignment/: AlignmentFixtureViewer.tsx
src/components/common/: CapabilitySummary.tsx  ModalDialog.tsx  StageNavigation.tsx
src/domain/lyrics/: parser.ts  (+4 more)
src/styles/: app.css
src/test/: setup.ts
src/workers/: alignment.worker.ts  audio.worker.ts  audioProcessor.test.ts  audioProcessor.ts  protocol.fuzz.test.ts  protocol.ts  whisper.worker.ts
tests/e2e/: phase0.spec.ts  phase1.spec.ts  phase11.spec.ts  phase2.spec.ts  phase3.spec.ts  phase4.spec.ts  phase5.spec.ts  phase6.spec.ts  phase7.spec.ts  phase8.spec.ts  phase9.spec.ts
(+76 files in other folders)
